--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -7,8 +7,9 @@ name = "pypi"
 django = "*"
 djangorestframework = "*"
 django-extensions = "*"
-pygraphviz = "*"
 django-cors-headers = "*"
+gunicorn = "*"
+psycopg2-binary = "*"
 
 [dev-packages]
 
