--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,12 @@
 	"dependencies": {
 		"axios": "^1.7.9",
 		"bootstrap": "^5.3.3",
+    "chart.js": "^4.4.7",
+    "chartjs-plugin-datalabels": "^2.2.0",
 		"prop-types": "^15.8.1",
 		"react": "^18.3.1",
 		"react-bootstrap": "^2.10.7",
+    "react-chartjs-2": "^5.3.0",
 		"react-dom": "^18.3.1",
 		"react-router-dom": "^7.1.1"
 	},
